# qt

./: README.md
QMLTest/: CMakeLists.txt  Main.qml  MyCompnent.qml  backend.cpp  backend.h  clogwriter.cpp  clogwriter.h  ctaskmanager.cpp  ctaskmanager.h  cthreadinfo.cpp  cthreadinfo.h  logs.h  main.cpp
qmlAllInOne/: CMakeLists.txt  build-with-qt-src.sh  main.cpp  qmlAllInOne.desktop
qmlAllInOne/qml/: Main.qml  Navigate.qml
qmlAllInOne/qml/audioVideo/: AVDisplay.qml
qmlAllInOne/qml/baseComponent/: BaseComponentEntry.qml  Header.qml  PixLine.qml  SliderV2.qml
qmlAllInOne/qml/global/: GlobalTest.qml  GlobalUISettings.qml
qmlAllInOne/qml/shape/: Shape.qml
qmlAllInOne/src/: main.cpp
qmlAllInOne/src/audioVideo/: cvideoprovider.cpp  cvideoprovider.h
qmlAllInOne/src/graphics/: cquickshape.cpp  cquickshape.h
